--- a/reboot-into-windows.desktop
+++ b/reboot-into-windows.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Reboot into Windows
+Comment=Use grub-reboot to reboot into Windows
 Terminal=false
 Exec=sudo reboot-into-windows
 Icon=/usr/share/reboot-into-windows/icon.svg
