rename to grub-reboot-into-windows

--- a/share/grub-reboot-into-windows.desktop
+++ b/share/grub-reboot-into-windows.desktop
@@ -3,6 +3,6 @@ Type=Application
 Name=Reboot into Windows
 Comment=Use grub-reboot to reboot into Windows
 Terminal=false
-Exec=sudo reboot-into-windows
-Icon=/usr/share/reboot-into-windows/icon.svg
+Exec=sudo grub-reboot-into-windows
+Icon=/usr/share/grub-reboot-into-windows/icon.svg
 Categories=System
